css/src/_wordpress.scss
$admin: false !default;
$align-breakpoint: 1000px;

.aligncenter {
	float: none;
	clear: both;
	display: block;
	margin: {
		left: auto;
		right: auto;
	}
}

.alignleft {
	margin-bottom: $paragraph-margin-bottom;
}

@include breakpoint($align-breakpoint up) {
	.alignleft {
		float: left;
		margin-right: $paragraph-margin-bottom;
	}

	.alignright {
		float: right;
		margin-left: $paragraph-margin-bottom;
	}
}

.wp-caption {
	max-width: 100%;
}

// Buttons
.wp-block-button .wp-block-button__link,
.wp-block-file .wp-block-file__button {
	@include button-base;
}

.wp-block-file .wp-block-file__button {
	background: $button-background;

	&:active,
	&:focus,
	&:hover {
		background: $button-background-hover;
	}
}

.wp-block-button {
	margin-bottom: $paragraph-margin-bottom;

	.wp-block-button__link {
		margin: 0;

		&:not(.has-background) {
			background: $button-background;

			&:active,
			&:focus,
			&:hover {
				background: $button-background-hover;
			}
		}
	}
}

.wp-block-button:not(.aligncenter) {
	@if($admin == false) {
		display: inline-block;
		vertical-align: top;
		margin-right: $global-layout-space;
	}
}

// Other blocks
.wp-block-cover,
.wp-block-image {
	margin-bottom: $paragraph-margin-bottom;
}

/* Quotes
------------------------- */
// Non-admin styles
@if($admin == false) {
	.wp-block-quote,
	.wp-block-pullquote {
		box-sizing: border-box;
		max-width: 100%;

		@include breakpoint($align-breakpoint up) {
			min-width: 350px;

			&.alignleft,
			&.alignright {
				width: calc(40% - #{$paragraph-margin-bottom});

				&.is-large,
				&.is-style-large {
					width: calc(60% - #{$paragraph-margin-bottom});
				}
			}

			&[style*="text-align:right"],
			&.alignright {
				margin: 0 0 $paragraph-margin-bottom $paragraph-margin-bottom;
				float: right;
			}
		}
	}

	.wp-block-quote {
		@include breakpoint($align-breakpoint up) {
			&.alignleft,
			&.alignright {
				width: calc(40% - #{$paragraph-margin-bottom});
			}
		}
	}
} @else {
	.wp-block-quote {
		&:not(.is-large):not(.is-style-large) {
			border-left: none;
		}
	}

	.wp-block[data-type="core/pullquote"][data-align="full"] .wp-block-pullquote {
		&::before,
		&::after {
			border-left-width: 0;
			border-right-width: 0;
		}
	}
}

.wp-block-quote,
.wp-block-pullquote {
	font-size: 1.5rem;

	blockquote {
		padding: 0;
	}

	p {
		margin-bottom: $paragraph-margin-bottom / 2;

		&:before,
		&:after {
			font-family: Times New Roman, serif;
			vertical-align: bottom;
			font-size: 5rem;
			text-align: right;
			line-height: 22px;
			letter-spacing: -4px;
			margin-right: -6px;
			color: lighten($blockquote-color, 50%);
			font-weight: bold;
		}

		// This font family's quotation marks have a leading space of approx. 9px at this font size.
		&:before {
			content: "\2018 \2018";
			text-align: left;
			margin-right: 0;
			padding-right: 6px;
		}

		// This font family's quotation marks have a leading space of approx. 4.5px at this font size.
		&:after {
			content: "\2019 \2019";
		}
	}
}

.wp-block-quote {
	&.is-style-large,
	&.is-large {
		padding: rem-calc(16) $global-layout-space;
	}
}

.wp-block-pullquote {
	clear: both;
	margin-bottom: $paragraph-margin-bottom;
	padding: $global-layout-space;

	&.alignleft,
	&.alignright {
		max-width: 1000%;
	}

	&.alignwide {
		&::before,
		&::after {
			height: 30px;
		}
	}

	&.alignfull {
		&::before,
		&::after {
			border-left-width: 0;
			border-right-width: 0;
		}

		&::before {
			border-top-width: 4px;
		}

		&::after {
			border-bottom-width: 4px;
		}
	}

	&:not(.alignleft, .alignright) {
		width: 100%;
	}

	&,
	blockquote {
		border: none;
	}

	blockquote {
		margin: 0;
	}

	cite {
		text-transform: uppercase;
	}
}

.wp-block-gallery {
	clear: both;
	display: flex;
	flex-wrap: wrap;
	list-style-type: none;
	padding: 0;
	margin-left: 0;
}

.wp-block-file {
	vertical-align: middle;
	font-weight: bold;

	a {
		font-weight: bold;
	}

	* + .wp-block-file__button {
		margin: {
			left: 0.75rem;
			bottom: 0;
		}
		vertical-align: baseline;
	}
}

.wp-block-table {
	&.is-style-stripes {
		border: $table-border;
		border-collapse: separate;
		border-spacing: 0;

		tr:nth-child(2n+1) {
			background-color: lighten($table-border-color, 42%);
		}
	}

	td,
	th {
		border-color: $table-border-color;
	}
}

.wp-block-separator {
	&:not(.is-style-dots) {
		border-bottom-color: $hr-border-color;
		border-bottom-style: dashed;
	}

	&.is-style-dots:before {
		color: $hr-border-color;
	}
}

@media only screen and (min-width: 768px) {
	.full-width-content .alignfull {
		margin: {
			left: calc(50% - 50vw);
			right: calc(50% - 50vw);
		}
		width: auto;
		max-width: 1000%;
	}

	.full-width-content .alignwide {
		margin: {
			left: calc(25% - 25vw);
			right: calc(25% - 25vw);
		}
		width: auto;
		max-width: 1000%;
	}

	.alignwide img,
	.alignfull img {
		display: block;
		margin: 0 auto;
	}
}

// Text block styles
p.intro-text,
.editor-styles-wrapper p.intro-text {
	font: 1.5rem / 1.5 $opensans;
}

.wp-block-embed {
	iframe {
		max-width: 100%;
	}
}

